# LUNAV2

./: .gitignore  GETTING_STARTED.md  LICENSE  LUNA_CONSCIOUSNESS_FRAMEWORK.md  Math_Preuve.md  PHASE_E_AUDIT_REPORT.md  README.md  VERSION  claude_desktop_config.example.json  luna.toml  pyproject.toml  requirements.txt
dashboard/: package.json  vite.config.ts
docs/: COGNITIVE_ARCHITECTURE.md  ECOSYSTEM_SNAPSHOT.md  LUNA_DREAM_SIMULATION_ARCHITECTURE.md  LUNA_EMERGENCE_PLAN.md  MATH.md  PHASE4_COMPLETION.md  equation_de_dirac.md  ✳ Quantum Entanglement Phi.md
luna/: LUNA_DREAM_SIMULATION_ARCHITECTURE.md  LUNA_ECOSYSTEM_ALIGNMENT_PLAN.md  LUNA_MATH_COMPLIANCE_AUDIT.md  LUNA_SELF_EVOLUTION_ARCHITECTURE.md  Last_Fix.md  Ultimate_Scan.md  __init__.py  __main__.py
luna_common/: __init__.py  constants.py
scripts/: migrate_memory.py  repair_truncated_json.py  validate_ports.sh
simulations/: LUNAV2.py
tests/: __init__.py  test_agent_registry.py  test_alerting.py  test_alerting_ssrf.py  test_api_consciousness.py  test_api_health.py  test_api_metrics.py  test_api_middleware.py  test_audit_trail.py  test_awakening.py  test_chat.py  test_checkpoint_persistence.py  test_cli_main.py  test_config.py  test_consciousness_state.py  test_context.py  test_dream_consolidation.py  test_dream_cycle.py  test_dream_mathematical_validation.py  test_dream_scenarios.py  test_dream_simulator.py  test_dream_wiring.py  test_emergent_phi.py  test_emergent_phi_integration.py  test_evaluator.py  test_fingerprint_generator.py  test_fingerprint_ledger.py  test_fractal_memory_v2.py  (+46 more)
(+148 files in other folders)
